--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ text {
 }
 
 </style>
-<svg width="960" height="600"></svg>
+<svg width="1280" height="800"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
@@ -51,11 +51,11 @@ d3.json("graphFile.json", function(error, graph) {
     
   var circles = node.append("circle")
       .attr("r", 5)
-      .attr("fill", function(d) { return color(d.group); })
-      .call(d3.drag()
-          .on("start", dragstarted)
-          .on("drag", dragged)
-          .on("end", dragended));
+      .attr("fill", function(d) { return color(d.group); });
+    //   .call(d3.drag()
+    //       .on("start", dragstarted)
+    //       .on("drag", dragged)
+    //       .on("end", dragended));
 
   var lables = node.append("text")
       .text(function(d) {
